fix header height issue on smaller devices, add icon for dependency tracker as test

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,10 +24,8 @@ a:hover {
     background: -webkit-linear-gradient(340deg, rgba(24,34,68,1) 0%, rgba(36,49,94,1) 39%, rgba(58,73,127,1) 100%);
     background: linear-gradient(340deg, rgba(24,34,68,1) 0%, rgba(36,49,94,1) 39%, rgba(58,73,127,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#182244",endColorstr="#3a497f",GradientType=1);
-    min-height: 200px;
-    max-height: 450px;
-    height: 60%;
-    padding: 15px;
+    
+    padding: 20px;
 }
 
 .header-container {
@@ -63,6 +61,13 @@ a:hover {
     cursor: pointer;
     box-shadow: 0 1.4px 6.4px 0 rgba(0,0,0,.132);
     height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card > img {
+    width: 40%;
 }
 
 .team-section > .team-name, .team-description {
@@ -110,6 +115,10 @@ a:hover {
     }
     .flex-container > .flex-item {
         width: 200px;
+    }
+
+    .header {
+        height: 60%;
     }
 }
 @media (min-width: 992px) {
